Fix overflow just need to fix height of each button

--- a/displaysite/src/components/pages/Home/Home.css
+++ b/displaysite/src/components/pages/Home/Home.css
@@ -1,10 +1,9 @@
 .content {
-    width: 100vw;
+    width: 99vw;
     margin: 0;
-    height: 100%;
+    height: 100vh;
     padding: 0; 
     overflow-x: hidden;
-    display: flex
 }
 
 .row {
